# AI-Hospital

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
.github/: copilot-instructions.md
backend/: .env  AI_hospital.py  OS_downloads.txt  __init__.py  api.py  pyproject.toml  requirements.txt
backend/Knowledge_notebooks/: initialize_rag.py
backend/custom_libs/: AI_hospital.ipynb  debug.ipynb  script.py
backend/vector_stores/Internal Medicine/728dc885-2665-4850-a68c-22887db17765/: index_metadata.pickle
backend/vector_stores/Pathology/5d56fed9-7faa-4056-a5b7-08fc0ca66bfe/: index_metadata.pickle
backend/vector_stores/Psychiatry/7ec020ed-05eb-4673-b3ad-4244dd8e1bf6/: index_metadata.pickle
frontend/src/ui/: App.tsx  glass.css
