[project]
name = "personal-ai-hospitall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "chromadb>=1.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "graphviz>=0.21",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "importnb>=2023.11.1",
    "indic-transliteration>=2.3.75",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-neo4j>=0.5.0",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "langsmith>=0.4.30",
    "mcp-server>=0.1.4",
    "nbformat>=5.10.4",
    "neo4j>=5.28.2",
    "nest-asyncio>=1.6.0",
    "openai>=1.108.2",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pygame>=2.6.1",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "speechrecognition>=3.14.3",
    "tenacity>=9.1.2",
    "unstructured[local-inference,pdf]>=0.18.14",
    "uvicorn[standard]>=0.35.0",
    "websockets>=10.4",
]
